@@ -1,6 +1,7 @@
 omweather (0.25) unstable; urgency=low
 
   * Various minor fixes
+  * Created animations for icons using HildonAnimation functions
 
  -- Vlad Vasiliev <vlad@gas.by>  Thu, 27 Sep 2009 11:20:10 +0200
 
@@ -14,7 +15,8 @@ omweather (0.24.6) unstable; urgency=low
   * Fixed some untranslated strings
   * Fixed bug #5363 "Theming bugs on buttons in settings and Forecast"
   * Fixed bug #5473 for omweather package "Small icon for all OMweather packages in application manager"
-  * Updated Finish, Russin, French translations
+  * Updated Finish, Russian, French, Germany translations
+  * Fixed bug #5465 "Better Translation (DE) for one menu item"
 
  -- Vlad Vasiliev <vlad@gas.by>  Thu, 20 Oct 2009 19:15:10 +0200
 
