@@ -3,6 +3,13 @@
   * Fixed problem with GPS for Fremantle
   * Fixed bug with null icons on display if iconset was deinstalled from system
   * Done optified
+  * Fixed problem with the text/button layout in the Update settings
+  * Fixed problem with long strings in popup window for non Engligh Languages
+  * Fixed some untranslated strings
+  * Fixed bug #5363 "Theming bugs on buttons in settings and Forecast"
+  * Fixed bug #5473 for omweather package "Small icon for all OMweather packages in application manager"
+  * Updated Finish, Russian, French, Germany translations
+  * Fixed bug #5465 "Better Translation (DE) for one menu item"
 
 0.24.5
 
